Fix: Remove underline from 'golden time' text, update affiliate links to https://amzn.to/3GI77eZ

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ footer a{color:#ffb347;}
 .footer-links{display:flex;gap:20px;flex-wrap:wrap;margin-bottom:20px;}
 hr.line{border:none;height:1px;background:#e6e6e6;margin:50px 0;}
 small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
-.mark{background:linear-gradient(transparent 60%, #ffe2b1 60%);}
+.mark{color:var(--brand-dark);font-weight:700;}
 .em{color:var(--brand-dark);font-weight:700;}
 .alert{background:#fff3f3;border:1px solid #f5b2b2;padding:12px 15px;border-radius:10px;font-size:.8rem;}
 .flex{display:flex;gap:16px;flex-wrap:wrap;}
@@ -399,7 +399,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
       プライム会員は <strong>3ヶ月無料</strong>、非会員も <strong>3ヶ月99円</strong> キャンペーン同時開催中。<br>
       1日15分の“耳学”で、1年後の知識と自信に<strong>90時間の差</strong>をつける。
     </p>
-    <p><button class="cta-primary" data-scroll="#register">今すぐ無料体験</button></p>
+    <p><button class="cta-primary" onclick="window.open('https://amzn.to/3GI77eZ','_blank')">今すぐ無料体験</button></p>
     <div class="note">※キャンペーン適用はキャンペーンサイト表示が条件です。ログイン後にバナー表記をご確認ください。</div>
   </div>
 </header>
@@ -407,7 +407,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
 <!-- Persistent CTA Bar -->
 <div class="cta-bar">
   <p>7/31 締切：プライム 3ヶ月無料 / 非会員 3ヶ月99円</p>
-  <button class="cta-primary" data-scroll="#register">今すぐ無料体験</button>
+  <button class="cta-primary" onclick="window.open('https://amzn.to/3GI77eZ','_blank')">今すぐ無料体験</button>
 </div>
 
 <main>
@@ -523,7 +523,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
       </div>
     </div>
     <p class="center" style="margin-top:40px;">
-      <button class="cta-primary" data-scroll="#cta-final">今すぐ無料体験</button>
+      <button class="cta-primary" onclick="window.open('https://amzn.to/3GI77eZ','_blank')">今すぐ無料体験</button>
     </p>
     <div class="alert">※ 再入会の場合、表示されるキャンペーン種別が異なる/表示されないことがあります。</div>
   </div>
