Improve UX: Change FAQ heading to empathetic tone, fix color contrast for 'golden time' text with white text on dark background

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ footer a{color:#ffb347;}
 .footer-links{display:flex;gap:20px;flex-wrap:wrap;margin-bottom:20px;}
 hr.line{border:none;height:1px;background:#e6e6e6;margin:50px 0;}
 small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
-.mark{color:var(--brand-dark);font-weight:700;}
+.mark{color:#fff;background:rgba(0,0,0,0.7);padding:2px 8px;border-radius:6px;font-weight:700;}
 .em{color:var(--brand-dark);font-weight:700;}
 .alert{background:#fff3f3;border:1px solid #f5b2b2;padding:12px 15px;border-radius:10px;font-size:.8rem;}
 .flex{display:flex;gap:16px;flex-wrap:wrap;}
@@ -637,7 +637,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
 <!-- Objection Handling (accordion) -->
 <section id="faq">
   <div class="wrapper">
-    <h2>“やらない理由” を今ここで消しておく</h2>
+    <h2>“不安や心配事、一緒に解決しましょう”</h2>
 
     <details class="ac-item" open>
       <summary><button><span class="plus">＋</span><span>続くか不安…三日坊主になりそう</span></button></summary>
