Fix countdown timer: Correct JavaScript element IDs to match HTML

--- a/index.html
+++ b/index.html
@@ -729,10 +729,10 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
 <script>
 // カウントダウンタイマー
 (function() {
-  const dEl = document.getElementById('days');
-  const hEl = document.getElementById('hours');
-  const mEl = document.getElementById('minutes');
-  const sEl = document.getElementById('seconds');
+  const dEl = document.getElementById('cd-days');
+  const hEl = document.getElementById('cd-hours');
+  const mEl = document.getElementById('cd-mins');
+  const sEl = document.getElementById('cd-secs');
   
   if (!dEl || !hEl || !mEl || !sEl) {
     console.warn('Countdown elements not found');
