Updated images: improved hero image and added custom SVG illustration for timeline

--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="note">※キャンペーン適用はキャンペーンサイト表示が条件です。ログイン後にバナー表記をご確認ください。</div>
       </div>
       <div class="hero-visual">
-        <img src="https://images.unsplash.com/photo-1544717297-fa95b6ee9643?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="ヘッドフォンで音楽を聴く女性" class="hero-image">
+        <img src="https://images.unsplash.com/photo-1611095965923-893b3c35b43c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="ヘッドフォンで学習する女性" class="hero-image">
       </div>
     </div>
   </div>
@@ -1699,7 +1699,22 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="timeline-content">
           <div class="story-card negative">
             <div class="story-image">
-              <img src="https://images.unsplash.com/photo-1551836022-deb4988cc6c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="疲れた主婦" class="timeline-image">
+              <svg viewBox="0 0 200 200" class="timeline-image" aria-label="疲れ気味の女性のイラスト" style="width: 100%; height: 200px; background-color: #f8f9fa; border-radius: 12px;">
+                <g transform="translate(100 100)">
+                  <!-- Face -->
+                  <circle cx="0" cy="0" r="60" fill="#f3d6c4"></circle>
+                  <!-- Hair -->
+                  <path d="M -60 -20 Q -50 -70 0 -80 Q 50 -70 60 -20 L 60 20 Q 30 40 0 40 Q -30 40 -60 20 Z" fill="#593c24"></path>
+                  <!-- Eyes -->
+                  <circle cx="-20" cy="-5" r="4" fill="#222"></circle>
+                  <circle cx="20" cy="-5" r="4" fill="#222"></circle>
+                  <!-- Mouth (sad) -->
+                  <path d="M -15 30 Q 0 20 15 30" stroke="#222" stroke-width="3" fill="none"></path>
+                  <!-- Eyebrows (tired) -->
+                  <path d="M -25 -15 Q -20 -20 -15 -15" stroke="#222" stroke-width="3" fill="none"></path>
+                  <path d="M 15 -15 Q 20 -20 25 -15" stroke="#222" stroke-width="3" fill="none"></path>
+                </g>
+              </svg>
             </div>
             <h3>📱 登録前の田中さん（35歳・2児の母）</h3>
             <div class="daily-schedule">
@@ -1735,9 +1750,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="timeline-marker">1週間後</div>
         <div class="timeline-content">
           <div class="story-card neutral">
-            <div class="story-image">
-              <img src="https://images.unsplash.com/photo-1494790108755-2616c9c0b8d4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="ヘッドフォンで学習する女性" class="timeline-image">
-            </div>
+            
             <h3>🎧 Audible開始1週間目</h3>
             <div class="changes-list">
               <div class="change-item">
@@ -1764,6 +1777,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="timeline-marker">1ヶ月後</div>
         <div class="timeline-content">
           <div class="story-card positive">
+            
             <h3>📚 習慣化成功！</h3>
             <div class="achievements">
               <div class="achievement">
