--- a/index.html
+++ b/index.html
@@ -1702,7 +1702,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="note">※キャンペーン適用はキャンペーンサイト表示が条件です。ログイン後にバナー表記をご確認ください。</div>
       </div>
       <div class="hero-visual">
-        <img src="https://images.unsplash.com/photo-1611095965923-893b3c35b43c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="ヘッドフォンで学習する女性" class="hero-image">
+        <img src="people-2561531_1280.jpg" alt="学習する人たち" class="hero-image">
       </div>
     </div>
   </div>
@@ -1795,24 +1795,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="timeline-marker">開始前</div>
         <div class="timeline-content">
           <div class="story-card negative">
-            <div class="story-image">
-              <svg viewBox="0 0 200 200" class="timeline-image" aria-label="疲れ気味の女性のイラスト" style="width: 100%; height: 200px; background-color: #f8f9fa; border-radius: 12px;">
-                <g transform="translate(100 100)">
-                  <!-- Face -->
-                  <circle cx="0" cy="0" r="60" fill="#f3d6c4"></circle>
-                  <!-- Hair -->
-                  <path d="M -60 -20 Q -50 -70 0 -80 Q 50 -70 60 -20 L 60 20 Q 30 40 0 40 Q -30 40 -60 20 Z" fill="#593c24"></path>
-                  <!-- Eyes -->
-                  <circle cx="-20" cy="-5" r="4" fill="#222"></circle>
-                  <circle cx="20" cy="-5" r="4" fill="#222"></circle>
-                  <!-- Mouth (sad) -->
-                  <path d="M -15 30 Q 0 20 15 30" stroke="#222" stroke-width="3" fill="none"></path>
-                  <!-- Eyebrows (tired) -->
-                  <path d="M -25 -15 Q -20 -20 -15 -15" stroke="#222" stroke-width="3" fill="none"></path>
-                  <path d="M 15 -15 Q 20 -20 25 -15" stroke="#222" stroke-width="3" fill="none"></path>
-                </g>
-              </svg>
-            </div>
+
             <h3>📱 登録前の田中さん（35歳・2児の母）</h3>
             <div class="daily-schedule">
               <div class="schedule-item">
