--- a/index.html
+++ b/index.html
@@ -290,20 +290,23 @@ section.compact{padding:35px 0;}
   text-align:center;
 }
 .solution-box{
-  background:linear-gradient(135deg,var(--brand),var(--summer-teal));
-  color:#fff;
+  background:#fff;
+  color:#2c3e50;
   padding:32px;
   border-radius:16px;
   box-shadow:0 12px 40px rgba(255,153,0,.3);
+  border:3px solid var(--brand);
 }
 .solution-box h3{
   margin:0 0 16px;
   font-size:1.4rem;
+  color:var(--brand-dark);
 }
 .solution-box p{
   margin:0 0 24px;
   font-size:1.1rem;
-  opacity:.9;
+  color:#495057;
+  font-weight:500;
 }
 .solution-benefits{
   display:grid;
@@ -311,11 +314,12 @@ section.compact{padding:35px 0;}
   gap:12px;
 }
 .benefit-item{
-  background:rgba(255,255,255,.2);
+  background:var(--brand-soft);
   padding:12px 16px;
   border-radius:8px;
   font-weight:600;
-  backdrop-filter:blur(10px);
+  color:var(--brand-dark);
+  border:1px solid rgba(255,153,0,.3);
 }
 @media(max-width:768px){
   .solution-benefits{
