--- a/index.html
+++ b/index.html
@@ -156,10 +156,15 @@ section.compact{padding:35px 0;}
 }
 .cta-note{
   display:block;
-  font-size:.8rem;
-  color:rgba(255,255,255,.8);
-  margin-top:8px;
-  font-weight:500;
+  font-size:.9rem;                    /* サイズアップ */
+  color:#2c3e50;                      /* 濃い青文字 */
+  background:rgba(255,255,255,.95);   /* 白背景 */
+  padding:8px 16px;                   /* 余白追加 */
+  border-radius:8px;                  /* 角丸 */
+  margin-top:12px;                    /* 間隔調整 */
+  font-weight:600;                    /* 太字 */
+  border:2px solid var(--brand-soft); /* オレンジボーダー */
+  box-shadow:0 2px 8px rgba(0,0,0,.1); /* 影効果 */
 }
 .risk-reversal{
   background:#f8f9fa;
