--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-<title>【主婦向け】家事の“ながら時間”を学びに変える：Audible 3ヶ月無料/3ヶ月99円キャンペーン（7/31締切）</title>
-<meta name="description" content="主婦向けAudible紹介LP。家事・育児で忙しくても“耳”を使って3ヶ月で読書量を激増。2025年7月31日までプライム会員3ヶ月無料 / 非会員3ヶ月99円。登録4ステップと反論つぶしFAQ付き。">
+<title>【3カ月無料】家事しながら "わたし時間" が増える耳読書｜Audible</title>
+<meta name="description" content="洗い物の15分、通勤の20分——時間がない主婦こそ耳読書で世界が広がる！いまだけプライム会員3カ月無料、非会員も99円×3。スマホ3タップで登録・解約も1秒。毎日がちょっと誇らしくなる体験、試さない？">
+
+<!-- OGP Tags -->
+<meta property="og:title" content="【3カ月無料】家事しながら "わたし時間" が増える耳読書｜Audible">
+<meta property="og:description" content="洗い物の15分、通勤の20分——時間がない主婦こそ耳読書で世界が広がる！いまだけプライム会員3カ月無料、非会員も99円×3。スマホ3タップで登録・解約も1秒。毎日がちょっと誇らしくなる体験、試さない？">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://audible-lp-3.vercel.app">
+<meta property="og:image" content="https://audible-lp-3.vercel.app/ogp-image.png">
+<meta property="og:site_name" content="Audible 耳読書キャンペーン">
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="【3カ月無料】家事しながら "わたし時間" が増える耳読書｜Audible">
+<meta name="twitter:description" content="洗い物の15分、通勤の20分——時間がない主婦こそ耳読書で世界が広がる！いまだけプライム会員3カ月無料、非会員も99円×3。スマホ3タップで登録・解約も1秒。毎日がちょっと誇らしくなる体験、試さない？">
+<meta name="twitter:image" content="https://audible-lp-3.vercel.app/ogp-image.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
 <style>
