Add scientific facts section with 8 data-driven benefits

--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,10 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
 .decision-prompt:before{
   content:'';
   position:absolute;
-  top:0;left:0;right:0;bottom:0;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
   background:linear-gradient(135deg,rgba(0,188,212,.03),rgba(255,219,61,.03));
   pointer-events:none;
 }
@@ -2191,7 +2194,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
               </div>
             </div>
             <div class="story-problems">
-              <p><strong>悩み：</strong>「読書したいけど時間がない」「自分の時間が全然ない」「このままでいいのかな...」</p>
+              <p><strong>悩み：</strong>「読書したいけど時間がない」「自分の時間がない」「このままでいいのかな...」</p>
             </div>
           </div>
         </div>
@@ -2463,7 +2466,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
   <div class="wrapper">
     <div class="section-header center">
       <h2 class="section-title">登録は<span class="highlight-text">たった3分</span>で完了</h2>
-      <p class="section-subtitle">複雑な手続きは一切なし。スマホがあれば今すぐ始められます</p>
+      <p class="section-subtitle">複雑な手続きは一切なし。スマホがあれば今すぐ開始</p>
     </div>
     
     <div class="registration-steps">
@@ -2503,7 +2506,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
         <div class="step-item" data-step="1">
           <div class="step-number">1</div>
           <div class="step-content">
-            <h3>キャンペーンページにアクセス</h3>
+            <h3>キャンペーンサイトにアクセス</h3>
             <p>下のボタンをタップするだけ。特別なアプリのダウンロードも不要です。</p>
           </div>
         </div>
@@ -2687,7 +2690,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
     <ul class="check-list">
       <li>本を開く時間がなく積読だけ増える</li>
       <li>子どもの前でスマホを見ている罪悪感</li>
-      <li>気づけば「数年前と同じ話題」しかない焦り</li>
+      <li>気づけば“数年前と同じ話題”しかない焦り</li>
       <li>自己投資したいが家計はできるだけ抑えたい</li>
       <li>家事の単純作業が“空白時間”で消えている</li>
     </ul>
@@ -2908,7 +2911,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
     <h2>登録は 4 ステップ（平均 5 分）</h2>
     <div class="grid cols-2">
       <div class="step">
-        <h3>キャンペーンサイトを開く</h3>
+        <h3>キャンペーンサイトにアクセス</h3>
         <p>ログイン後、バナーに <strong>“3ヶ月無料” “3ヶ月99円”</strong> のどちらかが表示 → 表示内容で適用判定。</p>
       </div>
       <div class="step">
@@ -2921,7 +2924,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
       </div>
       <div class="step">
         <h3>「プレミアムプランに登録」をタップ</h3>
-        <p>これで完了。アプリを開き最初の 1 冊を“再生” するまでが初期セットアップ。</p>
+        <p>これだけで3ヶ月無料体験スタート。すぐに12万冊以上の本が聴き放題に。</p>
       </div>
     </div>
     <p class="center" style="margin-top:40px;">
@@ -2987,7 +2990,7 @@ small.code{font-family:ui-monospace,monospace;font-size:.65rem;opacity:.7;}
           <strong>👩 40代・専業主婦</strong>
           <div class="stars">⭐⭐⭐⭐⭐</div>
         </div>
-        <p>「料理中に小説を聴くのが日課になりました。家事が楽しくなって、夫にも『最近イキイキしてるね』と言われました。月1,500円で毎日が充実するなんて思いませんでした。」</p>
+        <p>「料理中に小説を聴くのが日課になりました。家事が楽しくなって、夫にも『最近イキイキしてるね』と言われます。月1,500円で毎日が充実するなんて思いませんでした。」</p>
       </div>
       <div class="card">
         <div class="testimonial-header">
